--- a/Release_Notes.html
+++ b/Release_Notes.html
@@ -22,7 +22,7 @@
 <div class="col-sm-12 col-lg-4">
 <center>
 <h1 id="release-notes-for-open-stm32prgfw-util">Release Notes for STM32PRGFW-UTIL</h1>
-<p>Copyright © 2022 STMicroelectronics<br />
+<p>Copyright © 2024 STMicroelectronics<br />
 </p>
 <a href="https://www.st.com" class="logo"><img src="_htmresc/st_logo_2020.png" alt="ST logo" /></a>
 </center>
@@ -35,7 +35,131 @@
 </div>
 <div class="col-sm-12 col-lg-8">
 <h2 id="update-history"><strong>Update History</strong></h2>
-
+<div class="collapse">
+<input type="checkbox" id="collapse-section6" checked aria-hidden="true"> <label for="collapse-section6" aria-hidden="true"><strong>V1.1.1 / 23-August-2024</strong></label>
+<div>
+<h2 id="main-changes">Main changes</h2>
+<p>Flashing stability improved in USB mode for MP13 and MP15.</p>
+  <h2 id="contents">Contents</h2>
+  <p><small>The Project categories flagged by “<span class="icon-st-update"></span>” have changed since the previous release. “<span class="icon-st-add"></span>” are new.</small></p>
+  <h3 id="applications">Projects</h3>
+  <table>
+  <thead>
+  <tr class="header">
+  <th style="text-align: left;">Name</th>
+  <th style="text-align: center;">Version</th>
+  <th style="text-align: center;">Release note</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr class="odd">
+  <td style="text-align: left;">STM32MP2xx</td>
+  <td style="text-align: center;"></span></td>
+  <td style="text-align: center;"></td>
+  </tr>
+  <tr class="even">
+  <td style="text-align: left;">STM32MP13xx</td>
+  <td style="text-align: center;"><span class="icon-st-update"></span></td>
+  <td style="text-align: center;"></td>
+  </tr>
+  <tr class="even">
+    <td style="text-align: left;">STM32MP15xx</td>
+    <td style="text-align: center;"><span class="icon-st-update"></span></td>
+    <td style="text-align: center;"></td>
+    </tr>
+  </tbody>
+  </table>
+  <p>Provides ready-to-run applicative examples for STM32PRGFW-UTIL on the supported boards.
+  <h3 id="drivers">Drivers</h3>
+  <table>
+  <thead>
+  <tr class="header">
+  <th style="text-align: left;">Name</th>
+  <th style="text-align: center;">Version</th>
+  <th style="text-align: center;">Release note</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr class="odd">
+  <td style="text-align: left;">Cortex-A CMSIS</td>
+  <td style="text-align: center;">v5.6.0</td>
+  <td style="text-align: center;"></td>
+  </tr>
+  <tr class="even">
+  <td style="text-align: left;">STM32MP2xx CMSIS</td>
+  <td style="text-align: center;">v0.0.9.alpha1</td> 
+  <td style="text-align: center;"></td>
+  </tr>
+  <tr class="even">
+  <td style="text-align: left;">STM32MP13xx CMSIS</td>
+  <td style="text-align: center;">v0.5.0 </td>
+  <td style="text-align: center;"></td>
+  </tr>
+  <tr class="even">
+  <td style="text-align: left;">STM32MP1xx CMSIS</td>
+  <td style="text-align: center;">v1.6.1.alpha1 </td>
+  <td style="text-align: center;"></td>
+  </tr>
+  <tr class="odd">
+  <td style="text-align: left;">STM32MP2xx HAL</td>
+  <td style="text-align: center;">v0.0.9.alpha1 </td>
+  <td style="text-align: center;"></td>
+  </tr>
+  <tr class="odd">
+  <td style="text-align: left;">STM32MP13xx HAL</td>
+  <td style="text-align: center;">v0.6.0.alpha1</td>
+  <td style="text-align: center;"></td>
+  </tr>
+  <tr class="odd">
+  <td style="text-align: left;">STM32MP1xx HAL</td>
+  <td style="text-align: center;">v1.6.1.alpha1</td>
+  <td style="text-align: center;"></td>
+  </tr>
+  </tbody>
+  </table>
+  <h3 id="middlewares">Middlewares</h3>
+  <table>
+  <thead>
+  <tr class="header">
+  <th style="text-align: left;">Name</th>
+  <th style="text-align: left;">Version</th>
+  <th style="text-align: left;">Release note</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr class="odd">
+  <td style="text-align: left;">OpenBootloader</td>
+  <td style="text-align: center;">v5.0.0_mpu_220722</td>
+  <td style="text-align: left;"></td>
+  </tr>
+  <tr class="even">
+  <td style="text-align: left;">STM32_USB_Device_Library</td>
+  <td style="text-align: center;">v2.11.0_mpu_220722 </td>
+  <td style="text-align: left;"></td>
+  </tr>
+  </table>
+  <h2 id="supported-devices-and-boards-by-applications">Supported devices and boards by applications</h2>
+  <ul>
+  <li>STM32MP25xx Boards</li>
+  <li>STM32MP15xx Boards</li>
+  <li>STM32MP13xx Boards</li>
+  </ul>
+  <h2 id="dependencies">Dependencies</h2>
+  <p>This software release is compatible with:</p>
+  <ul>
+  <li>STM32CubeIDE 1.16.0.</li>
+  <li>STM32CubeProgrammer_v2.17.0</li>
+  </ul>
+  <h2 id="known-limitations">Known limitations</h2>
+  <ul>
+  <li>MP15 boards fail sometimes to connect to STM32CubeProgrammer via UART (reset the board and try again)
+  </ul>
+  <h2 id="backward-compatibility">Backward compatibility</h2>
+  <ul>
+  <li>Yes</li>
+  </ul>
+  </div>
+  </div>
 <div class="collapse">
 <input type="checkbox" id="collapse-section5" checked aria-hidden="true"> <label for="collapse-section5" aria-hidden="true"><strong>V1.1.0 / 21-June-2024</strong></label>
 <div>
